--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
           line-height: 1;
           display: block;
           /* background-color: #000; */
-          /* margin: 0 10px; */
+          margin: 20px 0px 10px;
         }
         .illustrator {
           width: 300px;
