--- a/index.html
+++ b/index.html
@@ -980,6 +980,8 @@
         cardvalues[2].innerText = classDatas[i]["time"];
         intro = bar[i].querySelector("p");
         intro.innerText = classDatas[i]["intro"];
+        link.href = classDatas[i]["url"];
+        const tags = classDatas[i]["tag"].split(",");
         if (classDatas[i].display == 0) {
           bar[i].style.display = "none";
         } else {
