--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
         intro = bar[i].querySelector("p");
         intro.innerText = classDatas[i]["intro"];
         link.href = classDatas[i]["url"];
-        const tags = classDatas[i]["tag"].split(",");
+        tags = classDatas[i]["tag"].split(",");
         if (classDatas[i].display == 0) {
           bar[i].style.display = "none";
         } else {
