--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         border: 2px solid rgba(255, 99, 133, 0.75);
         font: inherit;
         line-height: 1;
-        margin: 0.5em;
+        margin: 0.5em 1em 0.5em 0em;
         padding: 1em 2em;
       }
       @media (max-width: 1360px) and (min-width: 780px) {
@@ -488,7 +488,7 @@
       }
       @media (max-width: 780px) {
         .fill {
-          margin: 0.2em;
+          margin: 0.25em 0.15em 0.25em 0em;
           padding: 0.5em 1em;
           font-size: 16px;
         }
