increase classify mirror adjustment

--- a/oldver2.html
+++ b/oldver2.html
@@ -59,18 +59,13 @@
       }
       .group {
         position: absolute;
-        /* left: 20px; */
+        left: 20px;
         bottom: 10%;
-        width: 100%;
-        padding: 10px;
-        display: flex;
-        justify-content: space-around;
       }
       .button {
         transition: 0.3s;
-        /* float: left; */
-        display: inline-block;
-        /* margin: 0 8px; */
+        float: left;
+        margin: 0 8px;
         font-size: 18px;
         font-weight: 500;
         letter-spacing: 1px;
@@ -405,7 +400,7 @@
       }
       .modal p {
         margin: 15px 0px 0px 0px;
-        /* font-family: "Noto Sans KR", sans-serif; */
+        font-family: "Noto Sans KR", sans-serif;
         font-weight: 500;
         letter-spacing: 1px;
         line-height: 1.6;
@@ -414,8 +409,6 @@
         word-wrap: pre-wrap;
         color: #282828;
         animation-duration: 1.5s;
-        overflow: auto;
-        max-height: 60vh;
       }
       .modal .fas {
         background: rgba(255, 99, 133, 0.3);
@@ -483,23 +476,6 @@
         line-height: 1;
         margin: 0.5em 1em 0.5em 0em;
         padding: 1em 2em;
-      }
-      .fill-class.active {
-        color: #f7f7f7;
-        box-shadow: 0 0.5em 0.5em -0.4em rgb(166, 202, 135),
-          inset 0 0 0 2em rgb(166, 202, 135);
-        transform: translateY(-0.25em);
-      }
-      .fill-class  {
-        color: rgba(154, 255, 99, 0.75);
-        transition: 0.5s;
-        /* background: rgba(240, 239, 239, 0.911); */
-        background: transparent;
-        border: 2px solid rgba(99, 255, 99, 0.5);
-        font: inherit;
-        line-height: 1;
-        margin: 0.5em .5em 0.5em 0em;
-        padding: .8em 1.5em;
       }
       @media (max-width: 1360px) and (min-width: 780px) {
         .bar {
@@ -841,23 +817,14 @@
       </div>
     </div>
     <div class="dividegroup">
-      <!-- <button class="fill active">學程分類</button> -->
       <button class="fill active" data-modal-value="1">說故事與多媒體</button>
       <button class="fill active" data-modal-value="2">跨領域設計</button>
       <button class="fill active" data-modal-value="3">音樂與藝術</button>
     </div>
-    <div class="dividegroup">
-      <!-- <button class="fill-class active">向度分類</button> -->
-      <button class="fill-class active" data-class-value="A">A類</button>
-      <button class="fill-class active" data-class-value="B">B類</button>
-      <button class="fill-class active" data-class-value="C">C類</button>
-    </div>
-
   </body>
   <script>
     const labels = ["實用性", "跨域力", "難易度", "實作度", "理論度"];
     const classifyset = new Set();
-    const groupset = new Set();
     var classDatas;
     let RadarCharts = [];
     var openModalButtons, closeModalButtons;
@@ -912,23 +879,10 @@
       }
       return false;
     }
-    function checkGroupInteraction(index) {
-      for (const setValue of classDatas[index]["classify"]) {
-        // console.log(setValue)
-        // console.log(groupset)
-        if (groupset.has(setValue)) {
-          return true;
-        }
-      }
-      return false;
-    }
     function SetBarValue(RawData, len) {
       classifyset.add("1");
       classifyset.add("2");
       classifyset.add("3");
-      groupset.add("A");
-      groupset.add("B");
-      groupset.add("C");
       let bar = document.getElementsByClassName("bar");
       const card_footer = document.getElementsByClassName("card-footer");
       const classname = document.getElementsByClassName("name");
@@ -1052,7 +1006,7 @@
           str += tags[j].innerText;
         }
         str += classname[i].innerText;
-        if (str.toUpperCase().indexOf(filter) > -1 && checkSetInteraction(i)&&checkGroupInteraction(i)) {
+        if (str.toUpperCase().indexOf(filter) > -1 && checkSetInteraction(i)) {
           classDatas[i].display = 1;
           bar[i].style.display = "";
         } else {
@@ -1099,7 +1053,7 @@
         intro = bar[i].querySelector("p");
         intro.innerText = classDatas[i]["intro"];
         link.href = classDatas[i]["url"];
-        if (classDatas[i].display == 0 || !checkSetInteraction(i)||!checkGroupInteraction(i)) {
+        if (classDatas[i].display == 0 || !checkSetInteraction(i)) {
           bar[i].style.display = "none";
         } else {
           bar[i].style.display = "";
@@ -1165,25 +1119,6 @@
         rerender();
       });
     });
-    let classButtons = document.querySelectorAll("[data-class-value]");
-    classButtons.forEach((button) => {
-      button.addEventListener("click", () => {
-        const modal = button.dataset.classValue;
-        classifyModal(button, modal);
-        // console.log(classifyset);
-        rerender();
-      });
-    });
-    function classifyModal(button, value) {
-      if (button == null) return;
-      if (button.classList.contains("active")) {
-        button.classList.remove("active");
-        groupset.delete(value);
-      } else {
-        button.classList.add("active");
-        groupset.add(value);
-      }
-    }
     function dataModal(button, value) {
       if (button == null) return;
       if (button.classList.contains("active")) {
